# bolivia-exchange-tracker

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  etl-daily.yml
sql/: schema.sql
src/api/: database.py  main.py  schemas.py  services.py
src/api/routers/: rates.py
src/etl/: extract.py  load.py  pipeline.py  transform.py
src/models/: schemas.py
tests/: test_api.py  test_extract.py  test_load.py  test_transform.py
