[project]
name = "bolivia-exchange-tracker"
version = "0.1.0"
description = "Pipeline ETL + API REST de cotizaciones del dolar en Bolivia (oficial y binance)."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
